// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it detects errors 1`] = `
"45:2 - Type '{ unknownProperty: number; }' is not assignable to type 'Properties<0 | (string & {})>'.
  Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Properties<0 | (string & {})>'."
`;

exports[`it detects errors 2`] = `
"49:2 - Type 'number[]' is not assignable to type '0 | \\"auto\\" | \\"inherit\\" | (string & {}) | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | undefined'.
  Type 'number[]' is not assignable to type '\\"unset\\"'."
`;

exports[`it detects errors 3`] = `
"50:2 - Type 'number[]' is not assignable to type '\\"inherit\\" | \\"-moz-initial\\" | \\"initial\\" | \\"revert\\" | \\"unset\\" | (number & {}) | undefined'.
  Type 'number[]' is not assignable to type '\\"unset\\"'."
`;

exports[`it detects errors 4`] = `
"55:6 - Type '{}' is not assignable to type 'string & {}'.
  Type '{}' is not assignable to type 'string'."
`;

exports[`it detects errors 5`] = `
"60:10 - Type '\\"auto\\" | (string & {})' is not assignable to type '\\"auto\\"'.
  Type 'string & {}' is not assignable to type '\\"auto\\"'."
`;

exports[`it detects errors 6`] = `"67:6 - Type '1' is not assignable to type 'string | 0'."`;

exports[`it detects errors 7`] = `"79:23 - This condition will always return 'false' since the types 'string | 0' and '1' have no overlap."`;

exports[`it detects errors 8`] = `"86:14 - Argument of type '1' is not assignable to parameter of type 'string | 0'."`;

exports[`it detects errors 9`] = `"99:23 - This condition will always return 'false' since the types 'string | 0' and '1' have no overlap."`;

exports[`it detects errors 10`] = `"106:34 - Argument of type '1' is not assignable to parameter of type 'Width<0 | (string & {})>'."`;
